Fix logging in GPUProcessProxy::didCreateContextForVisibilityPropagation() https://bugs.webkit.org/show_bug.cgi?id=237907

Reviewed by Simon Fraser.

LayerHostingContextID is a uint32_t. The current printing ends up logging negative values:
`GPUProcessProxy::didCreateContextForVisibilityPropagation: webPageProxyID: 7, pagePID: 79, contextID: -2041854761`

* UIProcess/GPU/GPUProcessProxy.cpp:
(WebKit::GPUProcessProxy::didCreateContextForVisibilityPropagation):



Canonical link: https://commits.webkit.org/248450@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291311 268f45cc-cd09-0410-ab3c-d52691b4dbfc